fix: Fix overlap of expand sidebar button & expand widget button
Sidebar flexbox overlaps with the opened expand widget in screens with short width

--- a/styles/main.css
+++ b/styles/main.css
@@ -98,7 +98,6 @@ a:hover,
 
 .sidebar .logo-details {
   height: 60px;
-  display: flex;
   align-items: center;
   position: relative;
 }
